--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./output.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Dubai</title>
 </head>
 <body>
 <div class="bg-cover bg-center h-screen flex items-center justify-center" style="background-image: url('./img/dubai.jpg'); z-index: -1;">
