--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
     <div class="bg-black p-7"><div class="ring-2 ring-yellow-500 p-3"><div class="ring-2 ring-yellow-500 p-5">
         <h1 class="text-center text-4xl font-thin  text-yellow-500 md:overline">Habibi!Come to Dubai</h1>
         <div class=" text-center">
-        <input placeholder="enter your email address" type="email" class="md:text-3xl ring-pink-500  ring-2 mt-7 rounded-md p-3 bg-cover bg-center" style="background-image: url('./img/khalifa.jpg')"/>
+        <input placeholder="enter your email address" type="email" class="md:text-3xl sm:text-sm ring-pink-500  ring-2 mt-7 rounded-md p-3 bg-cover bg-center" style="background-image: url('./img/khalifa.jpg')"/>
         <button class="bg-pink-600 p-3 md:text-3xl rounded-md hover:bg-sky-500 ring-2 ring-sky-500 text-white">Submit</button></div></div></div>
     </div>
     <div class="flex md:justify-evenly bg-cover h-screen  brightness-90" style="background-image: url('./img/atlantis.jpg'); z-index: -1;">
