--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         <button class="bg-pink-500 hover:bg-sky-500 text-sky-500 hover:text-pink-500 text-3xl font-bold rounded-md p-4 mt-16 brightness-125 contrast-125">Time to Say Dubai</button>
     </div>
     </div>
-    <div class=" bg-black  p-10" > <div class="ring-2 ring-yellow-500 p-3" ><div class="ring-2 ring-yellow-500 p-4">
+    <div class=" bg-black  p-10" > <div class="ring-2 ring-yellow-500 p-3 shadow-md shadow-yellow-500" ><div class="ring-2 ring-yellow-500 p-4 shadow-md shadow-yellow-500">
         <div class="flex justify-center gap-2">
         <h1 class="text-center text-black  bg-yellow-400 font-thin text-6xl mt-10 shadow-xl shadow-yellow-500 ">Latest</h1><h1 class="text-center text-yellow-500  bg-black font-thin text-6xl mt-10 shadow-xl shadow-black " > News</h1></div>
         <div class="md:flex justify-evenly mt-10 md:space-x-2 sm:space-y-4 ">
@@ -44,22 +44,22 @@
         </div>
         </div>
         <div class="text-center">
-            <button class=" bg-black text-yellow-300 mt-10 ring-2 ring-yellow-300 text-xl  p-3 hover:text-black shadow-lg shadow-yellow-400 hover:bg-yellow-300 hover:scale-125 hover:animate-bounce ">Learn more </button></div>
+            <button class=" bg-black text-yellow-300 mt-10 ring-2 ring-yellow-300 text-xl  p-3 hover:text-black shadow-md shadow-yellow-400 hover:bg-yellow-300 hover:scale-125 hover:animate-bounce ">Learn more </button></div>
         </div></div></div>
         
         
-</div><div class=" p-7 bg-black"><div class="ring-2 ring-yellow-500 p-3"><div class="ring-2 ring-green-500"><div class="bg-black  p-10 md:flex md:justify-between sm:grid" > 
+</div><div class=" p-7 bg-black"><div class="ring-2 ring-yellow-500 p-3 shadow-md shadow-yellow-500"><div class="ring-2 ring-green-500 shadow-md shadow-green-400"><div class="bg-black  p-10 md:flex md:justify-between sm:grid" > 
     <img src="./img/greendubai.jpg"  class="contrast-150">
     <div><h1 class="text-green-400 text-7xl font-thin mx-4 text-end md:overline  ">Eco time</h1>
     <h2 class="text-white uppercase font-thin text-3xl text-right mt-4">what we do and who are we </h2>
     <p class="text-gray-700  text-xl text-right mx-3 mt-4 ">When you are faced with a large wall to fill,it's important to fill it out<p class="text-gray-700  text-xl text-right mx-3 mt-4">with furniture that is proportionate to the scale of the wall so that</p><p class="text-gray-700  text-xl text-right mx-3 mt-4"> whatever pieces you have sitting on or in front of the wall won't</p> <p class="text-gray-700  text-xl text-right mx-3 mt-4">be dwarfed by the wall.</p></p>
    <div class="text-right mx-7 mt-3">
-    <button class="text-green-400 ring-green-400 bg-transparent hover:bg-green-400 p-3 hover:text-black ring-2 text-3xl  shadow-md shadow-green-400 brightness-125 font-thin hover:animate-bounce mt-6">Read More </button></div></div></div>
+    <button class="text-green-400 ring-green-400 bg-transparent hover:bg-green-400 p-3 hover:text-black ring-2 text-3xl  shadow-md shadow-green-400 brightness-125 font-thin hover:animate-bounce mt-6 ">Read More </button></div></div></div>
 </div>
 </div></div></div></div>
 
 
-    <div class="bg-black p-7"><div class="ring-2 ring-yellow-500 p-3"><div class="ring-2 ring-yellow-500 p-5">
+    <div class="bg-black p-7"><div class="ring-2 ring-yellow-500 p-3 shadow-md shadow-yellow-500"><div class="ring-2 ring-yellow-500 p-5 shadow-md shadow-yellow-500">
         <h1 class="text-center text-4xl font-thin  text-yellow-500 md:overline">Habibi!Come to Dubai</h1>
         <div class=" text-center">
         <input placeholder="enter your email address" type="email" class="md:text-3xl sm:text-sm ring-pink-500  ring-2 mt-7 rounded-md p-3 bg-cover bg-center" style="background-image: url('./img/khalifa.jpg')"/>
